# MQGT-SCF

./: .cursorrules  .gitignore  ACCESS_GUIDE.md  ACCESS_STATUS.md  ACHIEVEMENT_SUMMARY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_RELEASE.md  CREATE_RELEASE_NOW.md  FINAL_STATUS.md  GET_GITHUB_INFO.md  GITHUB_COMMANDS.sh  IMPLEMENTATION_SUMMARY_COMPLETE_CHANNELS.md  INTEGRATION_MAP.md  MILESTONE_PHASE2.5.md  Makefile  NEXT_PHASE.md  PHASE2_COMPLETE.md  PHASE2_NOTES.md  PROPAGATION_PLAN.md  PR_DESCRIPTION.md  PUBLICATION_COMPLETE.md  PUBLICATION_MAP.md  PUSHED_FILES.md  README.md  RELEASE_CHECKLIST.md  RELEASE_DESCRIPTION.md  RELEASE_DESCRIPTION_FINAL.md  RELEASE_NOTES_V1.1.md  RELEASE_NOTES_V1.2.md  RELEASE_STEPS_EXACT.md  REPOSITORY_STATUS.md  REVIEWER_ACCESS_SOLVED.md  SECURITY.md  SETUP_GITHUB.md  VERIFICATION.md  VERIFY_RELEASE.md  ZENODO_DESCRIPTION_V1.1.md  (+8 more)
.cursor/rules/: 10-repo-audit-and-roadmap.mdc  20-docs-and-paper-quality.mdc  30-engineering-standards.mdc  40-github-and-collaboration.mdc
PROPAGATION_KIT/: APPLY_BANNER.sh  BANNER_APPLIED.md  BANNER_PROGRESS.md  CHECK_CI_STATUS.md  CI_DEBUG_QUICK_REF.md  CI_FIXES_APPLIED.md  CI_STATUS_CHECK.md  CI_STATUS_SUMMARY.md  CI_WORKFLOW_FIX_APPLIED.md  CLASSIFICATION_LIST.md  COMPLETE.md  CURRENT_CI_STATUS.md  EXECUTION_SUMMARY.md  FINAL_ACTION_CHECKLIST.md  FINAL_CI_FIX_APPLIED.md  FINAL_PYTEST_FIX_APPLIED.md  FINAL_STATUS.md  FINAL_STATUS_CHECK.md  FINAL_STYLE_CHECK_FIX_APPLIED.md  FINISHING_NAILS.md  FLIP_THE_SWITCHES.md  LIKELY_CI_FIXES.md  ONE_SCREEN_GAMEPLAN.md  PROFILE_README_TEMPLATE.md  QUICK_CHECKLIST.md  README.md  README_BANNER_TEMPLATE.md  READY_FOR_CI_CHECK.md  READY_FOR_FINAL_CI.md  READY_FOR_FINAL_FIX.md  REPO_CLASSIFICATION.md  REPO_INVENTORY.md  TENSORFLOW_FIX_APPLIED.md  TENSORFLOW_FIX_READY.md  UPGRADE_COMPLETE.md  WAITING_FOR_CI_COMPLETION.md  ZORAAPI_CI_FIXED.md  ZORAAPI_CLEAN_WORKFLOW.md  ZORAAPI_COMPILEALL_FIX.md  ZORAAPI_DIAGNOSTIC.md  (+2 more)
_superseded_artifacts/: README.md
data/: README.md
docs/: README.md  astrophysics_channel.md  collider_channel.md  comprehensive_test_catalog.md  cosmology_channel.md  dark_matter_channel.md  data_setup.md  faq.md  gravitational_waves_channel.md  neutrinos_channel.md  precision_channel.md  quantum_optics_channel.md  reviewer_notes.md  roadmap.md  theorem_proofs_channel.md
paper/: README.md  V11_HARNESS_NOTE.md  main_with_reproducibility.tex  references.bib  results_summary.json  supplement.tex
papers/toe/: README.md  (+1 more)
scripts/: generate_collider_bounds.py  generate_dm_bounds.py  generate_gw_bounds.py  generate_lss_bounds.py  generate_neutrino_bounds.py  generate_qrng_constraint_bounds.py  generate_sn1987a_bounds.py  generate_stellar_cooling_bounds.py
tests/: __init__.py  test_imports.py  test_inference_smoke.py  test_reproduce_smoke.py  test_simulation_smoke.py
theory/: ToE_canonical_variants.md  ToE_key_equations.md  ToE_summary.md  assumptions.md  field_equations.md  glossary.md  symbol_index.md  teleology.md
(+66 files in other folders)
