[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqgt-scf"
version = "1.2.0"
description = "Merged Quantum Gauge and Scalar Consciousness Framework: Operational constraints on ethically-weighted quantum measurement"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC-BY-4.0"}
authors = [
    {name = "Christopher Michael Baird"}
]
keywords = [
    "quantum-measurement",
    "effective-field-theory",
    "consciousness",
    "bayesian-inference",
    "reproducibility",
    "physics",
    "theoretical-physics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Creative Commons Attribution 4.0 International (CC BY 4.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Note: Dependencies are managed via requirements.txt and requirements-lock.txt
# for reproducibility. This section is for reference only.
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "numba>=0.56.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pymc>=5.0.0",
    "arviz>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/Cbaird26/MQGT-SCF"
Documentation = "https://github.com/Cbaird26/MQGT-SCF#readme"
Repository = "https://github.com/Cbaird26/MQGT-SCF"
Zenodo = "https://zenodo.org/records/18050570"
DOI = "10.5281/zenodo.18012506"

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks tests as smoke tests (fast, basic checks)",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W503",  # line break before binary operator (conflicts with black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
ignore_missing_imports = true  # For optional dependencies

